2009-08-05  John W. Eaton  <jwe@octave.org>

	* acx_pthread.m4: New file.
	* configure.in: Include it and invoke ACX_PTHREAD macro.  Print
	ptrhead flags and libraries in summary output.
	* Makeconf.in (PTHREAD_CFLAGS, PTHREAD_LIBS): Substitute values.
	(ALL_CFLAGS, ALL_CXXFLAGS): Include $(PTHREAD_CFLAGS).

2009-08-03  Jaroslav Hajek  <highegg@gmail.com>

	* NEWS: Update.

2009-07-27  Jaroslav Hajek  <highegg@gmail.com>

	* NEWS: Update.

2009-07-22  Jaroslav Hajek  <highegg@gmail.com>

	* NEWS: Update.

2009-07-16  John W. Eaton  <jwe@octave.org>

	* Makeconf.in (MAGICK_LIBS): Don't pass --ldflags to $(MAGICK_CONFIG).

2009-07-09  John W. Eaton  <jwe@octave.org>

	* configure.in: Don't use system strftime on MinGW systems.

2009-06-29  Jaroslav Hajek  <highegg@gmail.com>

	* NEWS: Correct info.
	* NEWS: Update.

2009-06-26  Michael Goffioul  <michael.goffioul@gmail.com>

	* aclocal.m4: Add pkg.m4 macros.
	* configure.in (HAVE_FREETYPE): New defined variable.
	* configure.in: Add configure tests for Fontconfig detection.

2009-06-23  Robert T. Short  <octave@phaselockedsystems.com>

	* run-octave.in: Exclude @-files from path.  Remove CVS exclusions.

2009-06-19  Jaroslav Hajek  <highegg@gmail.com>

	* NEWS: Update.

2009-06-15  Jaroslav Hajek  <highegg@gmail.com>

	* NEWS: Update.

2009-06-02  Jaroslav Hajek  <highegg@gmail.com>

	* examples/@polynomial/subsref.m: Handle ':' correctly.
	* examples/@polynomial/subsasgn.m: Ditto.

2009-06-11  Jaroslav Hajek  <highegg@gmail.com>

	* example/@polynomial/numel.m: New method.
	* example/@polynomial/Makefile.in: Include it.

2009-05-22 Benjamin Lindner  <lindnerb@users.sourceforge.net>

	* mkoctfile.cc.in: mask MSVC specific linker flags for mex output

2009-06-02  Robert T. Short  <octave@phaselockedsystems.com>

	* examples/@polynomial: Fix end method for zero based indexing.

2009-06-02  Jaroslav Hajek  <highegg@gmail.com>

	* examples/@polynomial/subsref.m: Allow chained subscripts,
	fix behavior according to docs.