@@ -41,6 +41,10 @@ along with Octave; see the file COPYING.  If not, see
 #define OCTAVE_CONF_ALL_LDFLAGS %OCTAVE_CONF_ALL_LDFLAGS%
 #endif
 
+#ifndef OCTAVE_CONF_AMD_LIBS
+#define OCTAVE_CONF_AMD_LIBS %OCTAVE_CONF_AMD_LIBS%
+#endif
+
 #ifndef OCTAVE_CONF_ARFLAGS
 #define OCTAVE_CONF_ARFLAGS %OCTAVE_CONF_ARFLAGS%
 #endif
@@ -49,8 +53,16 @@ along with Octave; see the file COPYING.  If not, see
 #define OCTAVE_CONF_AR %OCTAVE_CONF_AR%
 #endif
 
+#ifndef OCTAVE_CONF_ARPACK_LIBS
+#define OCTAVE_CONF_ARPACK_LIBS %OCTAVE_CONF_ARPACK_LIBS%
+#endif
+
 #ifndef OCTAVE_CONF_BLAS_LIBS
 #define OCTAVE_CONF_BLAS_LIBS %OCTAVE_CONF_BLAS_LIBS%
+#endif
+
+#ifndef OCTAVE_CONF_CAMD_LIBS
+#define OCTAVE_CONF_CAMD_LIBS %OCTAVE_CONF_CAMD_LIBS%
 #endif
 
 #ifndef OCTAVE_CONF_CARBON_LIBS
@@ -65,8 +77,20 @@ along with Octave; see the file COPYING.  If not, see
 #define OCTAVE_CONF_CC_VERSION %OCTAVE_CONF_CC_VERSION%
 #endif
 
+#ifndef OCTAVE_CONF_CCOLAMD_LIBS
+#define OCTAVE_CONF_CCOLAMD_LIBS %OCTAVE_CONF_CCOLAMD_LIBS%
+#endif
+
 #ifndef OCTAVE_CONF_CFLAGS
 #define OCTAVE_CONF_CFLAGS %OCTAVE_CONF_CFLAGS%
+#endif
+
+#ifndef OCTAVE_CONF_CHOLMOD_LIBS
+#define OCTAVE_CONF_CHOLMOD_LIBS %OCTAVE_CONF_CHOLMOD_LIBS%
+#endif
+
+#ifndef OCTAVE_CONF_COLAMD_LIBS
+#define OCTAVE_CONF_COLAMD_LIBS %OCTAVE_CONF_COLAMD_LIBS%
 #endif
 
 #ifndef OCTAVE_CONF_CPICFLAG
@@ -79,6 +103,10 @@ along with Octave; see the file COPYING.  If not, see
 
 #ifndef OCTAVE_CONF_CURL_LIBS
 #define OCTAVE_CONF_CURL_LIBS %OCTAVE_CONF_CURL_LIBS%
+#endif
+
+#ifndef OCTAVE_CONF_CXSPARSE_LIBS
+#define OCTAVE_CONF_CXSPARSE_LIBS %OCTAVE_CONF_CXSPARSE_LIBS%
 #endif
 
 #ifndef OCTAVE_CONF_CXXCPP
@@ -149,12 +177,24 @@ along with Octave; see the file COPYING.  If not, see
 #define OCTAVE_CONF_FPICFLAG %OCTAVE_CONF_FPICFLAG%
 #endif
 
+#ifndef OCTAVE_CONF_FT2_LIBS
+#define OCTAVE_CONF_FT2_LIBS %OCTAVE_CONF_FT2_LIBS%
+#endif
+
 #ifndef OCTAVE_CONF_GLPK_LIBS
 #define OCTAVE_CONF_GLPK_LIBS %OCTAVE_CONF_GLPK_LIBS%
 #endif
 
 #ifndef OCTAVE_CONF_GNUPLOT
 #define OCTAVE_CONF_GNUPLOT %OCTAVE_CONF_GNUPLOT%
+#endif
+
+#ifndef OCTAVE_CONF_GRAPHICS_LIBS
+#define OCTAVE_CONF_GRAPHICS_LIBS %OCTAVE_CONF_GRAPHICS_LIBS%
+#endif
+
+#ifndef OCTAVE_CONF_HDF5_LIBS
+#define OCTAVE_CONF_HDF5_LIBS %OCTAVE_CONF_HDF5_LIBS%
 #endif
 
 #ifndef OCTAVE_CONF_INCFLAGS
@@ -245,8 +285,28 @@ along with Octave; see the file COPYING.  If not, see
 #define OCTAVE_CONF_OCTLIBDIR %OCTAVE_CONF_OCTLIBDIR%
 #endif
 
+#ifndef OCTAVE_CONF_OPENGL_LIBS
+#define OCTAVE_CONF_OPENGL_LIBS %OCTAVE_CONF_OPENGL_LIBS%
+#endif
+
 #ifndef OCTAVE_CONF_PREFIX
 #define OCTAVE_CONF_PREFIX %OCTAVE_CONF_PREFIX%
+#endif
+
+#ifndef OCTAVE_CONF_PTHREAD_CFLAGS
+#define OCTAVE_CONF_PTHREAD_CFLAGS %OCTAVE_CONF_PTHREAD_CFLAGS%
+#endif
+
+#ifndef OCTAVE_CONF_PTHREAD_LIBS
+#define OCTAVE_CONF_PTHREAD_LIBS %OCTAVE_CONF_PTHREAD_LIBS%
+#endif
+
+#ifndef OCTAVE_CONF_QHULL_LIBS
+#define OCTAVE_CONF_QHULL_LIBS %OCTAVE_CONF_QHULL_LIBS%
+#endif
+
+#ifndef OCTAVE_CONF_QRUPDATE_LIBS
+#define OCTAVE_CONF_QRUPDATE_LIBS %OCTAVE_CONF_QRUPDATE_LIBS%
 #endif
 
 #ifndef OCTAVE_CONF_RANLIB
@@ -255,6 +315,10 @@ along with Octave; see the file COPYING.  If not, see
 
 #ifndef OCTAVE_CONF_RDYNAMIC_FLAG
 #define OCTAVE_CONF_RDYNAMIC_FLAG %OCTAVE_CONF_RDYNAMIC_FLAG%
+#endif
+
+#ifndef OCTAVE_CONF_REGEX_LIBS
+#define OCTAVE_CONF_REGEX_LIBS %OCTAVE_CONF_REGEX_LIBS%
 #endif
 
 #ifndef OCTAVE_CONF_RLD_FLAG
@@ -297,6 +361,10 @@ along with Octave; see the file COPYING.  If not, see
 #define OCTAVE_CONF_UGLY_DEFS %OCTAVE_CONF_UGLY_DEFS%
 #endif
 
+#ifndef OCTAVE_CONF_UMFPACK_LIBS
+#define OCTAVE_CONF_UMFPACK_LIBS %OCTAVE_CONF_UMFPACK_LIBS%
+#endif
+
 #ifndef OCTAVE_CONF_USE_64_BIT_IDX_T
 #define OCTAVE_CONF_USE_64_BIT_IDX_T %OCTAVE_CONF_USE_64_BIT_IDX_T%
 #endif
@@ -327,6 +395,10 @@ along with Octave; see the file COPYING.  If not, see
 
 #ifndef OCTAVE_CONF_YFLAGS
 #define OCTAVE_CONF_YFLAGS %OCTAVE_CONF_YFLAGS%
+#endif
+
+#ifndef OCTAVE_CONF_ZLIB_LIBS
+#define OCTAVE_CONF_ZLIB_LIBS %OCTAVE_CONF_ZLIB_LIBS%
 #endif
 
 #ifndef OCTAVE_CONF_config_opts
